# smith

./: .clippy.toml  .gitignore  AGENTS.md  CLAUDE.md  hello-taskplane-2.md  hello-taskplane.md
.cargo/: config.toml
.claude/agents/: adw-doctor.md  assayer.md  builder.md  dependency-manager.md  docs-writer.md  gardener.md  herald.md  journeyman.md  planner.md  quartermaster.md  release-manager.md  reviewer.md  security-reviewer.md  sentinel.md  surveyor.md  sweeper.md  triager.md
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  task.md
.github/rulesets/: main.json
.github/workflows/: adw-alerts.yml  adw-automerge.yml  adw-build.yml  adw-codex-build.yml  adw-codex-review.yml  adw-comment.yml  adw-deps.yml  adw-docs.yml  adw-doctor.yml  adw-gate.yml  adw-intake.yml  adw-jam-detector.yml  adw-labels.yml  adw-plan.yml  adw-release.yml  adw-review.yml  adw-revise.yml  adw-survey.yml  adw-sweep.yml  ci-prototype.yml  codeql.yml  devskim.yml  docs.yml  p35-adw-harness.yml  p37-codex-harness.yml  pages.yml  prototypes.yml
.pi/: flow.json  settings.json  taskplane-config.json  taskplane.json
.pi/agents/: compressor.md  deslopper.md  prototyper.md  smith-spec.md  smith.md
.pi/diagnostics/: u0-a165-20260420T010313-events.jsonl  u0-a165-20260420T010313-report.md
.pi/prompts/: capture.md  compress.md  deslop.md  handmade.md  pioneer.md  prototype.md  sabotnik.md  smith.md  spec.md
.pi/supervisor/: actions.jsonl  events.jsonl  u0-a165-20260420T005500-summary.md  u0-a165-20260420T010112-summary.md  u0-a165-20260420T010313-summary.md
docs/: AI-CRATE-DESIGN.md  PLUGIN-SDK-DESIGN.md  PROJECT-INVARIANTS.md  RESEARCH-NOTES.md  SPEC.md  TASK-BREAKDOWN.md  TUI-CRATE-DESIGN.md  spec-sm-003-scaffolding.md  spec-sm-004-architecture.md  spec-sm-005-shared-types.md  spec-sm-006-core.md  spec-sm-007-ai.md  spec-sm-008-tui.md  spec-sm-009-harness.md  spec-sm-010-cli.md  spec-sm-011-workspace.md  spec-sm-012-testing.md
docs/assets/: README.md  social-preview.html
docs/design/: AI-CRATE-DESIGN.md  PLUGIN-SDK-DESIGN.md  TUI-CRATE-DESIGN.md
docs/plans/: AGENTIC-DEVELOPMENT.md  PLUGIN-DOC-PLAN.md  PROTOTYPE-REPORT.md  README.md  TASK-BREAKDOWN.md  WALKING-SKELETON.md
docs/research/: ARENA-ALLOCATION-RESEARCH.md  CI-PATTERNS-RESEARCH.md  CLAUDE.md  CLIPPY-BEST-PRACTICES.md  CRATE-ECOSYSTEM-RESEARCH.md  OCAML-MODULES-FOR-LUA-PLUGIN-ECOSYSTEM.md  RELEASE-BUILD-RESEARCH.md  RESEARCH-NOTES.md  SMITH-MEMORY-ALLOCATION-PROFILE.md  SOURCES.md  TERMINAL-CAPABILITIES-RESEARCH.md  TESTING-STRATEGY-RESEARCH.md
docs/specs/: spec-sm-003-scaffolding.md  spec-sm-004-architecture.md  spec-sm-005-shared-types.md  spec-sm-006-core.md  spec-sm-007-ai.md  spec-sm-008-tui.md  spec-sm-009-harness.md  spec-sm-010-cli.md  spec-sm-011-workspace.md  spec-sm-012-testing.md
prototypes/: AGENTS.md  CLAUDE.md  PLAN.md
prototypes/.cargo/: config.toml
prototypes/p02-lua-interface-descriptor/: Cargo.toml
prototypes/p03-subagent-ecosystem-simulation/: Cargo.toml
prototypes/p04-plugin-install-uninstall/: Cargo.toml
prototypes/p05-provider-fetch-normalize/: Cargo.toml
prototypes/p06-session-codec-recovery/: Cargo.toml
prototypes/p07-streamfn-agent-loop/: Cargo.toml
prototypes/p08-tui-testbackend/: Cargo.toml
prototypes/p09-memory-arena-allocation/: Cargo.toml
prototypes/p1-workspace/: Cargo.toml
prototypes/p1-workspace/src/: main.rs
prototypes/p10-lua-plugin-heap-limit/: Cargo.toml
prototypes/p10-xtask/: Cargo.toml
prototypes/p11-plugin-memory-domain-reload/: Cargo.toml
prototypes/p11-trace-roundtrip/: Cargo.toml
prototypes/p12-real-streaming/: Cargo.toml
prototypes/p12-session-tree-fold/: Cargo.toml
prototypes/p13-harness-reload/: Cargo.toml
prototypes/p13-secret-proxy-mechanics/: Cargo.toml
prototypes/p14-replay-engine/: Cargo.toml
prototypes/p14-steering-queue/: Cargo.toml
prototypes/p15-async-lua-threading/: Cargo.toml
prototypes/p15-async-lua-threading/src/: main.rs
prototypes/p15-hot-reload/: Cargo.toml
prototypes/p16-config-cascade-reload/: Cargo.toml
prototypes/p16-syntastica/: Cargo.toml
prototypes/p16-syntastica/src/: main.rs
prototypes/p17-bytecode-cache/: Cargo.toml
prototypes/p17-bytecode-cache/src/: main.rs
prototypes/p17-vcs-sdk/: Cargo.toml
prototypes/p18-architecture-contract/: Cargo.toml
prototypes/p18-model-resolver/: Cargo.toml
prototypes/p19-cli-smoke/: Cargo.toml
prototypes/p19-models-dev-schema-pin/: Cargo.toml  providers.schema.json
prototypes/p2-lua/: Cargo.toml
prototypes/p20-testing-meta/: Cargo.toml
prototypes/p20-trace-replay-contracts/: Cargo.toml
prototypes/p21-compaction-round/: Cargo.toml
prototypes/p22-input-queue-machine/: Cargo.toml
prototypes/p25-git-boundary/: Cargo.toml
prototypes/p25-git-boundary/src/: main.rs
prototypes/p26-jj-boundary/: Cargo.toml
prototypes/p26-jj-boundary/src/: main.rs
prototypes/p2b-lua-sandbox/: Cargo.toml
prototypes/p2b-lua-sandbox/src/: main.rs
prototypes/p34-ci-pipeline/archgate/: Cargo.toml  gate.py  pup.ron
prototypes/p34-ci-pipeline/archgate/wai/: Cargo.toml
prototypes/p34-ci-pipeline/archgate/wai/src/: lib.rs
prototypes/p34-ci-pipeline/archgate/wcore/: Cargo.toml
prototypes/p34-ci-pipeline/archgate/wcore/src/: lib.rs
prototypes/p34-ci-pipeline/archgate/wharness/: Cargo.toml
prototypes/p34-ci-pipeline/archgate/wharness/src/: lib.rs
prototypes/p34-ci-pipeline/cross/: Cargo.toml
prototypes/p34-ci-pipeline/cross/src/: main.rs
taskplane-tasks/: CONTEXT.md  dependencies.json
tmp/: audit_check.py
(+157 files in other folders)
