[package]
name = "p2b-lua-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10", features = ["vendored", "serialize", "lua54"] }
serde_json = "1"
# Note: NO "luajit" feature. Uses vendored Lua 5.4 (pure C, no JIT assembly).
# This avoids the __clear_cache link failure on Android/aarch64.
